--- a/AssECMA/package.json
+++ b/AssECMA/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "jquery-validation": "^1.19.3",
     "json-server": "^0.17.0",
-    "navigo": "^8.11.1"
+    "navigo": "^8.11.1",
+    "toastr": "^2.1.4"
   }
 }
